--- a/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
+++ b/Portfolio-architecte-sophie-bluel/FrontEnd/index.html
@@ -66,7 +66,7 @@
 				<div class="modal2">
 					<p class="titreModalPhoto addPhoto">Ajout photo</p>
 					<form action="#" class="formModal addPhoto" method="post" id="form" name="form"></form>
-					<div class="divIcon addPhoto">
+					<div class="divIcon addPhoto" id="DivIcon">
 						<i class="fa-regular fa-images addPhoto" id="logo"></i>
 						<input class="addPhoto inputform" type="file" id="uploadImg" accept=".jpg, .png" name="imageUrl"required></input>
 						<label  for="uploadImg" id="btn-img-upload" class="buttonAjoutPhoto addPhoto">+ Ajouter une photo</label>
